--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ project(graphs-algorithms)
 # creates the variable EXEC and sets it to hello
 set(EXEC main)
 set(EXEC_DJIKSTRA djikstra)
+set(EXEC_KRUSKAL kruskal)
 
 # set the C++14 standard
 set(CMAKE_CXX_STANDARD 14)
@@ -17,7 +18,9 @@ include_directories(includes)
 # puts all .cpp files inside src to the SOURCES variable
 file(GLOB SOURCES src/main.cpp src/graph.cpp)
 file(GLOB SOURCES_DJIKSTRA src/djikstra.cpp src/graph.cpp)
+file(GLOB SOURCES_KRUSKAL src/kruskal.cpp src/graph.cpp)
 
 # compiles the files defined by SOURCES to generate the executable defined by EXEC
 add_executable(${EXEC} ${SOURCES})
 add_executable(${EXEC_DJIKSTRA} ${SOURCES_DJIKSTRA})
+add_executable(${EXEC_KRUSKAL} ${SOURCES_KRUSKAL})
