--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ set(EXEC main)
 set(EXEC_DJIKSTRA djikstra)
 set(EXEC_KRUSKAL kruskal)
 set(EXEC_PRIM prim)
+set(EXEC_BELLMANFORD bellmanford)
 
 # set the C++14 standard
 set(CMAKE_CXX_STANDARD 14)
@@ -21,9 +22,11 @@ file(GLOB SOURCES src/main.cpp src/graph.cpp)
 file(GLOB SOURCES_DJIKSTRA src/djikstra.cpp src/graph.cpp)
 file(GLOB SOURCES_KRUSKAL src/kruskal.cpp src/graph.cpp)
 file(GLOB SOURCES_PRIM src/prim.cpp src/graph.cpp)
+file(GLOB SOURCES_BELLMANFORD src/bellmanford.cpp src/graph.cpp)
 
 # compiles the files defined by SOURCES to generate the executable defined by EXEC
 add_executable(${EXEC} ${SOURCES})
 add_executable(${EXEC_DJIKSTRA} ${SOURCES_DJIKSTRA})
 add_executable(${EXEC_KRUSKAL} ${SOURCES_KRUSKAL})
 add_executable(${EXEC_PRIM} ${SOURCES_PRIM})
+add_executable(${EXEC_BELLMANFORD} ${SOURCES_BELLMANFORD})
